programmatically center circles

--- a/app/assets/stylesheets/components/_circle.scss
+++ b/app/assets/stylesheets/components/_circle.scss
@@ -14,6 +14,9 @@
 .banner-circle {
   width: 123px;
   height: 123px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 0.8em;
   letter-spacing: 0.2em;
   border-radius: 50%;
