add viewing room to mobile nav

--- a/app/views/shared/_who_is_artyque.html.slim
+++ b/app/views/shared/_who_is_artyque.html.slim
@@ -5,7 +5,7 @@
       .circle.banner-circle.white.c-dark-blue.rotating
         p.title <strong>·</strong>&nbsp;&nbsp; AVAILABLE &nbsp;&nbsp;<strong>·</strong>&nbsp;&nbsp; ARTWORKS &nbsp;&nbsp;
     .d-flex.justify-content-between.align-items-center.title
-      h4.title Who is Artyque
+      h4.title.w-50 Who is Artyque
       HR.lines.w-70
   .who-is-text.my-5
     p. ARTYQUE was founded by two art enthusiasts, Mattia Cremieux and Ksenia Stepanova, to gather a great community of emerging artists, art lovers, collectors and art institutions around a common goal: grow together in a more rewarding way.
