--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -16,6 +16,8 @@ nav.navbar.d-block.d-sm-none
       li
         = link_to 'About Us', about_path, class: 'navbar-link'
       li
+        = link_to 'Viewing Room', "https://artyque-shop.myshopify.com"
+      li
         = link_to 'Contact', contact_path, class: 'navbar-link'
       li
         = link_to 'News', news_posts_path, class: 'navbar-link'
