--- a/app/views/news_posts/show.html.slim
+++ b/app/views/news_posts/show.html.slim
@@ -7,7 +7,7 @@
           p.c-pink = @news_post.created_at.strftime('%A, %d %B %Y')
 article#main-content.container.pt-3.mb-5
   .row.mt-3
-    = cl_image_tag @news_post.photo, class: 'news-post-photo w-100' if @news_post.photo.present?
+    = cl_image_tag @news_post.photo, class: 'news-post-photo w-contain-not-too-big' if @news_post.photo.present?
   .row.mt-3
     .col-12
       = md @news_post.content
