--- a/app/assets/stylesheets/components/_modals.scss
+++ b/app/assets/stylesheets/components/_modals.scss
@@ -1,47 +1,49 @@
-
+.modal {
+  z-index: 25000;
+}
 .modal-dialog-custom {
-	max-width: 900px !important;
-	margin: auto !important;
-	.modal-header-custom {
-		padding: 20px;
-	}
+  max-width: 900px !important;
+  margin: auto !important;
+  .modal-header-custom {
+    padding: 20px;
+  }
 }
 
 .modal-content {
-	padding-bottom: 30px;
+  padding-bottom: 30px;
 
-	.separate-content {
-		padding: 30px 0;
-		&-bottom {
-			margin-bottom: 40px;
-		}
-	}
+  .separate-content {
+    padding: 30px 0;
+    &-bottom {
+      margin-bottom: 40px;
+    }
+  }
 }
 
 .text-body {
-	max-width: 90%;
+  max-width: 90%;
     margin: auto;
     .body-title {
-    	margin: 30px 0;
+      margin: 30px 0;
     }
-	.modal-lead-text {
-    	font-weight: bold;
-    	text-align: center;
-	    line-height: 37px;
-		font-size: 24px;
-	}
+  .modal-lead-text {
+      font-weight: bold;
+      text-align: center;
+      line-height: 37px;
+    font-size: 24px;
+  }
 }
 
 .wrapper-body-bullets {
-	padding-right: 10px;
-	ul {
-		max-width: 727px;
-		padding: 30px;
-		margin: auto;
-	}
-	li {
-		line-height: 30px;
-	}
+  padding-right: 10px;
+  ul {
+    max-width: 727px;
+    padding: 30px;
+    margin: auto;
+  }
+  li {
+    line-height: 30px;
+  }
 }
 
 .services {
