change out founders image

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,7 +21,7 @@
   </div>
   <%= render "shared/circle_collectors" %>
 </div>
-<div style="background-image: url(<%= image_path 'bg-about.jpg' %>);" class="new-look-banner bg-blue-gradient about-banner"></div>
+<%= image_tag 'founders.jpg', class: 'w-100', style: "max-height: 70vh; object-fit: cover; object-position: 50% 15%;" %>
 <div class="container  overflow-hidden">
   <%= render "shared/who_is_artyque" %>
 </div>
